--- a/calorie_tracker/templates/base.html
+++ b/calorie_tracker/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en" class="bg-zinc-900 text-zinc-100">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calorie Tracker</title>
     <link href="{{ url_for('static', filename='css/output.css') }}" rel="stylesheet">
