--- a/calorie_tracker/templates/login/login.html
+++ b/calorie_tracker/templates/login/login.html
@@ -20,6 +20,9 @@
                 Log In
             </button>
         </form>
+        <div class="flex justify-between mt-4">
+            <a href="{{ url_for('forgot_password') }}" class="text-blue-400 hover:underline text-sm">Forgot password?</a>
+        </div>
         <div class="mt-6 text-center">
             <span class="text-zinc-400">Don't have an account?</span>
             <a href="{{ url_for('signup') }}"
