--- a/calorie_tracker/templates/saved.html
+++ b/calorie_tracker/templates/saved.html
@@ -18,7 +18,7 @@
                 <thead>
                     <tr>
                         <th class="py-2 px-2 border-b border-zinc-700 text-zinc-300">Date</th>
-                        <th class="py-2 px-2 border-b border-zinc-700 text-zinc-300">Calories</th>
+                        <th class="py-2 px-2 border-b border-zinc-700 text-zinc-300">Total Calories</th>
                         <th class="py-2 px-2 border-b border-zinc-700 text-zinc-300">Actions</th>
                     </tr>
                 </thead>
